my first npm package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wrap-with-smile",
+  "name": "wrap-with-thumbsup",
   "version": "1.0.0",
   "description": "It takes the string that yu",
   "main": "index.js",
